feat: add multitenancy module (#8)